dbgate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dbgate
  annotations:
    cert-manager.io/cluster-issuer: "ca-issuer"
spec:
  ingressClassName: traefik
  rules:
  - host: dbgate.k3s-fch.dev.gnc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dbgate
            port:
              number: 80
  tls:
  - hosts:
    - dbgate.k3s-fch.dev.gnc
    secretName: dbgate-k3s-fch-dev-gnc
